[package]
name = "optimize_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.2"
rand_xoshiro = "0.6.0"
ordered-float = "2.8.0"
approx = "0.5.0"
rayon = "1.5.1"
#ndarray = "0.15.3"
